fix: removing those css properties for now, the layout is still broken on bigger viewports

--- a/public/global.css
+++ b/public/global.css
@@ -16,7 +16,3 @@ body {
   background-color: var(--gray-1);
   height: 100vh;
 }
-
-#next {
-  height: 100vh;
-}
